[project]
name = "lab6-intelligent-search"
version = "0.1.0"
description = ""
authors = [
    {name = "jh",email = "jhmelomo@ucvvirtual.edu.pe"}
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pgmpy (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]